objects/ssot__CareProgramDetail__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareProgramId__c</fullName>
        <label>Care Program</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailRecordId__c</fullName>
        <label>Detail Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailRecordObject__c</fullName>
        <label>Detail Record Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailSubtype__c</fullName>
        <label>Detail Subtype</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailType__c</fullName>
        <label>Detail Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Program Detail Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726237813_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramDetail_CareProgramId_map__rel</label>
        <referenceTo>ssot__CareProgram__dlm</referenceTo>
        <relationshipLabel>CareProgramDetail_CareProgramId_map__rel</relationshipLabel>
        <relationshipName>rel_1716726237813_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726238780_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramDetail_DetailRecordId_map_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>CareProgramDetail_DetailRecordId_map_rel</relationshipLabel>
        <relationshipName>rel_1716726238780_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726250996_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramDetail_DetailRecordId_map_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>CareProgramDetail_DetailRecordId_map_rel</relationshipLabel>
        <relationshipName>rel_1716726250996_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>